--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Simas Juknelis",
   "license": "MIT",
   "dependencies": {
-    "electron": "^2.0.5"
+    "electron": "^2.0.5",
+    "ip": "^1.1.5"
   }
 }
